--- a/config.toml.example
+++ b/config.toml.example
@@ -4,9 +4,11 @@ host = "192.168.114.30"
 port = "8086"
 db = "fping"
 measurement = "ping"
+precision = "ms"
+retentionpolicy = "infinite"
 user = "fping"
-pass = "fpingpassword"
+pass = "fpingdakjwgkawjnmbjhwtuia"
 
 [consul]
 
-url = "http://username:password@consul1.dx/v1/catalog/nodes"
+url = "http://a:a@consul1.dx/v1/catalog/nodes"
